# dmgen4gtest

./: .travis.yml  CMakeLists.txt  README.md  build.sh
cmake/: ModuleMFCCompileOptions.cmake
include/: dmgen4gtest_config.h.in  dmgen_config.h  dmlimit.h
src/dmgen4gtest/: builderror.sh  dmgen.cpp  dmgen.h  dmpackage  main.cpp
src/dmgen4gtest/tpl/: CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
src/dmgen4gtest/tpl/src/gtest/: gtest-all.cc
src/dmgen4gtest/tpl/test/{{PROJECT_NAME_LO}}/: {{PROJECT_NAME_LO}}.cpp
